Thu Feb 12 22:27:05 1998  Tom Tromey  <tromey@cygnus.com>

	* aclocal.in (scan_m4_files): Reverse-sort keys when constructing
	`search' function.  From Johan Danielsson.

Tue Sep 16 14:13:15 1997  Paul D. Smith  <psmith@baynetworks.com>

	* automake.in: Create new option --generate-deps.  This option has
	automake generate a .dep_segment file containing just the
	dependencies created from the .P list.  This is needed to maintain
	other makefiles that automake doesn't deal with (Makefile.DOS,
	SMakefile, etc.)
	* automake.texi (Invoking Automake): Document it.

Thu Feb 12 19:45:16 1998  Tom Tromey  <tromey@cygnus.com>

	* aclocal.in (scan_configure): Tightened regexp a bit.  Test
	whoami.test.  From Johan Danielsson.

	Report from H.J. Lu.
	* automake.in (output_yacc_build_rule): Don't write rule to create
	`.h' file.
	(handle_yacc_lex_cxx): Generate rule to build each .h file.

	* automake.in (handle_options): Set readme-alpha and check-news
	for Gnits after main processing.  Test alpha.test.  From Jim
	Meyering.

	* aclocal.in (usage): Updated bug-reporting address.
	* automake.in (usage): Updated bug-reporting address.

	* compile.am: Remove *.core for 4.4BSD systems.  From Assar
	Westerlund.

	* automake.in (handle_single_transform_list): Don't set
	seen_any_source if all sources are C++.

Wed Feb 11 17:30:01 1998  Tom Tromey  <tromey@cygnus.com>

	* aclocal.in (write_aclocal): Write to $output_file, not
	aclocal.m4.  From Alexandre Oliva.

Thu Feb  5 13:38:55 1998  Tom Tromey  <tromey@cygnus.com>

	* automake.in (scan_one_configure_file): Put CXCPP before CXX in
	regexp.  From Garth Corral.  Test cxxxcpp.test.

Sun Jan 25 11:16:53 1998  Tom Tromey  <tromey@cygnus.com>

	* automake.in (generate_makefile): Run handle_minor_options before
	handle_dist, to make sure README-alpha ends up in distribution.
	From Jim Meyering.

Tue Jan 13 09:19:33 1998  Tom Tromey  <tromey@cygnus.com>

	* aclocal.in (add_file): Hack for Perl 4.  From Seth Alves.
