@@ -1,5 +1,7 @@
 Thu Feb 12 22:27:05 1998  Tom Tromey  <tromey@cygnus.com>
 
+	* tags.am (TAGS): Uniquify list of files.  From Harlan Stenn.
+
 	* aclocal.in (scan_m4_files): Reverse-sort keys when constructing
 	`search' function.  From Johan Danielsson.
 
